[package]
name = "gateway-reqwest"
description = "Gateway - Reqwest Service Implementation"
version = "0.1.0"
authors = ["Perry Birch <perrybirch@vizidrix.com>"]
publish = false

[dependencies]
log = "0.4.8"
reqwest = "0.9.22"
serde = "1.0"
serde_json = "1.0"
url = { git = "https://github.com/servo/rust-url" }

[dependencies.gateway]
git = "https://github.com/omnivers3/gateway"
# path = "../gateway"

[dev-dependencies]
env_logger = "0.7.1"
mockito = "0.21.0"
serde_derive = "1.0"

[dev-dependencies.gateway]
git = "https://github.com/omnivers3/gateway"
# path = "../gateway"
features = ["mockito-enabled"]